--- a/build.gradle
+++ b/build.gradle
@@ -42,7 +42,7 @@ publishing {
 }
 
 artifactory {
-    contextUrl = 'http://localhost:8081/artifactory'
+    contextUrl = 'http://lart32la.eastasia.cloudapp.azure.com:8082/artifactory'
     publish {
         repository {
             repoKey = 'libs-snapshot-local' // The Artifactory repository key to publish to
